syntax = "proto3";

package audit;

service AuditService {
    rpc addAudit(AuditRequest) returns (AuditResponse);
}

message AuditRequest {
    string auditId = 1;
    string message = 2;
}

message AuditResponse {
    string auditId = 1;
    string message = 2;
    int32 extractedNumber = 3;
}